# usb_joystick

./: Cargo.toml  LICENSE  rust-toolchain.toml
.cargo/: config.toml
src/: hid_descriptor.rs  joystick.rs  main.rs  network.rs  state.rs  usb_device.rs  usb_ethernet.rs  web.rs
static/: index.html  script.js  style.css
