[package]
name = "usb_joystick"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "arch-cortex-m",
  "executor-thread",
  "nightly",
] }
embassy-rp = { version = "0.3", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio-proc = "0.2.2"
pio = "0.2.1"
embassy-usb = { version = "0.4.0", features = [
  "defmt",
  #"max-interface-count-8",
] }
fixed = "1.28.0"
fixed-macro = "1.2.0"
rand = { version = "0.8.5", default-features = false }
embedded-io-async = "0.6.1"
heapless = { version = "0.8", default-features = false }
picoserve = { version = "0.14", features = ["defmt", "embassy"] }
serde = { version = "1.0.204", default-features = false }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
static_cell = { version = "2", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
embassy-net = { version = "0.6", features = [
  "defmt",
  "tcp",
  "udp",
  "dhcpv4",
  "proto-ipv4",
  "medium-ethernet",
  "dns",
  "multicast",
] }
embedded-hal-async = "1.0.0"
usbd-hid = { version = "0.8.2", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
edge-net = { version = "0.10", features = ["edge-nal-embassy", "embassy"] }
edge-dhcp = "0.5"
edge-mdns = "0.5"
edge-nal-embassy = "0.5"
edge-nal = "0.5"
edge-captive = "0.5"
